[gd_scene load_steps=4 format=3 uid="uid://biim2lxri0akl"]

[ext_resource type="Script" uid="uid://d4cr67i8sc3n2" path="res://scene/combat/field/Field.gd" id="1_7p7dw"]
[ext_resource type="Script" uid="uid://dcxvt5wrpv2ml" path="res://scene/combat/DragLayer.gd" id="2_31waw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_crh71"]
size = Vector2(597.256, 148)

[node name="Field" type="Node2D"]
position = Vector2(638, 566)
script = ExtResource("1_7p7dw")

[node name="Cards" type="Node2D" parent="."]
top_level = true
z_index = 10
position = Vector2(640, 618)

[node name="DragLayer" type="Node2D" parent="."]
script = ExtResource("2_31waw")

[node name="Panel" type="Panel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.278431)
offset_left = -595.0
offset_top = 6.0
offset_right = 605.0
offset_bottom = 170.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="HandArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -598.0
offset_top = 9.0
offset_right = 602.0
offset_bottom = 160.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="CardDropAreaRight" type="Area2D" parent="."]
position = Vector2(22, -3)
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropAreaRight"]
position = Vector2(279, 83)
shape = SubResource("RectangleShape2D_crh71")

[node name="CardDropAreaLeft" type="Area2D" parent="."]
position = Vector2(-21, -2)
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropAreaLeft"]
position = Vector2(-280, 82)
shape = SubResource("RectangleShape2D_crh71")
